# gtk_c_examples

./: README.md
GTK_HelloWorld/: CMakeLists.txt  main.c
GTK_Packing/: CMakeLists.txt
GTK_Packing/inc/: gtk_callbacks.h
GTK_Packing/src/: gtk_callbacks.c  main.c
GTK_Views/: CMakeLists.txt  main.c  main_view.c  main_view.h  second_view.c  second_view.h
